tests/ui/macros/metavar-expressions/concat-usage-errors.stderr
error[E0806]: `${concat(..)}` requires at least one argument
  --> $DIR/concat-usage-errors.rs:7:11
   |
LL |         ${concat()}
   |           ^^^^^^
   |
   = note: constructed identifiers must not be empty

error: expected comma
  --> $DIR/concat-usage-errors.rs:15:10
   |
LL |         ${concat(aaaa aaaa)}
   |          ^^^^^^^^^^^^^^^^^^^

error: expected comma
  --> $DIR/concat-usage-errors.rs:23:10
   |
LL |         ${concat($ex, aaaa 123)}
   |          ^^^^^^^^^^^^^^^^^^^^^^^

error[E0807]: invalid item within a `${concat(...)}` expression
  --> $DIR/concat-usage-errors.rs:52:22
   |
LL |         let ${concat("\u{00BD}", $ident)}: () = ();
   |                      ^^^^^^^^^^
   |
   = note: this literal produced an invalid identifier
help: expanding this `concat(...)` expression
  --> $DIR/concat-usage-errors.rs:52:15
   |
LL |         let ${concat("\u{00BD}", $ident)}: () = ();
   |               ^^^^^^

error[E0807]: invalid item within a `${concat(...)}` expression
  --> $DIR/concat-usage-errors.rs:72:30
   |
LL |         let ${concat($ident, "\u{00BD}")}: () = ();
   |                              ^^^^^^^^^^
   |
   = note: this literal produced an invalid identifier
help: expanding this `concat(...)` expression
  --> $DIR/concat-usage-errors.rs:72:15
   |
LL |         let ${concat($ident, "\u{00BD}")}: () = ();
   |               ^^^^^^

error[E0807]: invalid item within a `${concat(...)}` expression
  --> $DIR/concat-usage-errors.rs:87:26
   |
LL |         let ${concat(_a, 1.5)}: () = ();
   |                          ^^^
   |
   = note: float literals cannot be concatenated
   = help: `concat` can join metavariables, identifiers, string literals, and integer literals
help: expanding this `concat(...)` expression
  --> $DIR/concat-usage-errors.rs:87:15
   |
LL |         let ${concat(_a, 1.5)}: () = ();
   |               ^^^^^^

error[E0807]: invalid item within a `${concat(...)}` expression
  --> $DIR/concat-usage-errors.rs:90:26
   |
LL |         let ${concat(_a, c"hi")}: () = ();
   |                          ^^^^^
   |
   = note: C string literals cannot be concatenated
   = help: `concat` can join metavariables, identifiers, string literals, and integer literals
help: expanding this `concat(...)` expression
  --> $DIR/concat-usage-errors.rs:90:15
   |
LL |         let ${concat(_a, c"hi")}: () = ();
   |               ^^^^^^

error[E0807]: invalid item within a `${concat(...)}` expression
  --> $DIR/concat-usage-errors.rs:92:26
   |
LL |         let ${concat(_a, b"hi")}: () = ();
   |                          ^^^^^
   |
   = note: byte literals cannot be concatenated
   = help: `concat` can join metavariables, identifiers, string literals, and integer literals
help: expanding this `concat(...)` expression
  --> $DIR/concat-usage-errors.rs:92:15
   |
LL |         let ${concat(_a, b"hi")}: () = ();
   |               ^^^^^^

error[E0807]: invalid item within a `${concat(...)}` expression
  --> $DIR/concat-usage-errors.rs:94:26
   |
LL |         let ${concat(_a, b'b')}: () = ();
   |                          ^^^^
   |
   = note: byte literals cannot be concatenated
   = help: `concat` can join metavariables, identifiers, string literals, and integer literals
help: expanding this `concat(...)` expression
  --> $DIR/concat-usage-errors.rs:94:15
   |
LL |         let ${concat(_a, b'b')}: () = ();
   |               ^^^^^^

error[E0807]: invalid item within a `${concat(...)}` expression
  --> $DIR/concat-usage-errors.rs:96:26
   |
LL |         let ${concat(_a, b'b')}: () = ();
   |                          ^^^^
   |
   = note: byte literals cannot be concatenated
   = help: `concat` can join metavariables, identifiers, string literals, and integer literals
help: expanding this `concat(...)` expression
  --> $DIR/concat-usage-errors.rs:96:15
   |
LL |         let ${concat(_a, b'b')}: () = ();
   |               ^^^^^^

error[E0807]: invalid item within a `${concat(...)}` expression
  --> $DIR/concat-usage-errors.rs:99:30
   |
LL |         let ${concat($ident, 1.5)}: () = ();
   |                              ^^^
   |
   = note: float literals cannot be concatenated
   = help: `concat` can join metavariables, identifiers, string literals, and integer literals
help: expanding this `concat(...)` expression
  --> $DIR/concat-usage-errors.rs:99:15
   |
LL |         let ${concat($ident, 1.5)}: () = ();
   |               ^^^^^^

error[E0807]: invalid item within a `${concat(...)}` expression
  --> $DIR/concat-usage-errors.rs:101:30
   |
LL |         let ${concat($ident, c"hi")}: () = ();
   |                              ^^^^^
   |
   = note: C string literals cannot be concatenated
   = help: `concat` can join metavariables, identifiers, string literals, and integer literals
help: expanding this `concat(...)` expression
  --> $DIR/concat-usage-errors.rs:101:15
   |
LL |         let ${concat($ident, c"hi")}: () = ();
   |               ^^^^^^

error[E0807]: invalid item within a `${concat(...)}` expression
  --> $DIR/concat-usage-errors.rs:103:30
   |
LL |         let ${concat($ident, b"hi")}: () = ();
   |                              ^^^^^
   |
   = note: byte literals cannot be concatenated
   = help: `concat` can join metavariables, identifiers, string literals, and integer literals
help: expanding this `concat(...)` expression
  --> $DIR/concat-usage-errors.rs:103:15
   |
LL |         let ${concat($ident, b"hi")}: () = ();
   |               ^^^^^^

error[E0807]: invalid item within a `${concat(...)}` expression
  --> $DIR/concat-usage-errors.rs:105:30
   |
LL |         let ${concat($ident, b'b')}: () = ();
   |                              ^^^^
   |
   = note: byte literals cannot be concatenated
   = help: `concat` can join metavariables, identifiers, string literals, and integer literals
help: expanding this `concat(...)` expression
  --> $DIR/concat-usage-errors.rs:105:15
   |
LL |         let ${concat($ident, b'b')}: () = ();
   |               ^^^^^^

error[E0807]: invalid item within a `${concat(...)}` expression
  --> $DIR/concat-usage-errors.rs:107:30
   |
LL |         let ${concat($ident, b'b')}: () = ();
   |                              ^^^^
   |
   = note: byte literals cannot be concatenated
   = help: `concat` can join metavariables, identifiers, string literals, and integer literals
help: expanding this `concat(...)` expression
  --> $DIR/concat-usage-errors.rs:107:15
   |
LL |         let ${concat($ident, b'b')}: () = ();
   |               ^^^^^^

error: metavariables of `${concat(..)}` must be of type `ident`, `literal` or `tt`
  --> $DIR/concat-usage-errors.rs:18:19
   |
LL |         ${concat($ex)}
   |                   ^^
   |
   = note: currently only string literals are supported

error[E0806]: variable `foo` is not recognized in meta-variable expression
  --> $DIR/concat-usage-errors.rs:32:30
   |
LL |         const ${concat(FOO, $foo)}: i32 = 2;
   |                              ^^^

error[E0807]: `${concat(..)}` constructed an invalid identifier
  --> $DIR/concat-usage-errors.rs:39:14
   |
LL |         let ${concat("1", $ident)}: () = ();
   |              ^^^^^^^^^^^^^^^^^^^^^
...
LL |     starting_number!(_abc);
   |     ---------------------- in this macro invocation
   |
   = note: this error originates in the macro `starting_number` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected pattern, found `$`
  --> $DIR/concat-usage-errors.rs:52:13
   |
LL |         let ${concat("\u{00BD}", $ident)}: () = ();
   |             ^ expected pattern
...
LL |     starting_invalid_unicode!(_abc);
   |     ------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `starting_invalid_unicode` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected pattern, found `$`
  --> $DIR/concat-usage-errors.rs:72:13
   |
LL |         let ${concat($ident, "\u{00BD}")}: () = ();
   |             ^ expected pattern
...
LL |     ending_invalid_unicode!(_abc);
   |     ----------------------------- in this macro invocation
   |
   = note: this error originates in the macro `ending_invalid_unicode` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected pattern, found `$`
  --> $DIR/concat-usage-errors.rs:87:13
   |
LL |         let ${concat(_a, 1.5)}: () = ();
   |             ^ expected pattern
...
LL |     unsupported_literals!(_abc);
   |     --------------------------- in this macro invocation
   |
   = note: this error originates in the macro `unsupported_literals` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0807]: `${concat(..)}` constructed an invalid identifier
  --> $DIR/concat-usage-errors.rs:80:14
   |
LL |         let ${concat("", "")}: () = ();
   |              ^^^^^^^^^^^^^^^^
...
LL |     empty!();
   |     -------- in this macro invocation
   |
   = note: this error originates in the macro `empty` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0807]: `${concat(..)}` constructed an invalid identifier
  --> $DIR/concat-usage-errors.rs:114:16
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     bad_literal_string!("\u{00BD}");
   |     ------------------------------- in this macro invocation
   |
note: expanding this metavariable
  --> $DIR/concat-usage-errors.rs:114:31
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                               ^^^^^^^
   = note: this error originates in the macro `bad_literal_string` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0807]: `${concat(..)}` constructed an invalid identifier
  --> $DIR/concat-usage-errors.rs:114:16
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     bad_literal_string!("\x41");
   |     --------------------------- in this macro invocation
   |
note: expanding this metavariable
  --> $DIR/concat-usage-errors.rs:114:31
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                               ^^^^^^^
   = note: this error originates in the macro `bad_literal_string` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0807]: `${concat(..)}` constructed an invalid identifier
  --> $DIR/concat-usage-errors.rs:114:16
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     bad_literal_string!("🤷");
   |     ------------------------- in this macro invocation
   |
note: expanding this metavariable
  --> $DIR/concat-usage-errors.rs:114:31
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                               ^^^^^^^
   = note: this error originates in the macro `bad_literal_string` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0807]: `${concat(..)}` constructed an invalid identifier
  --> $DIR/concat-usage-errors.rs:114:16
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     bad_literal_string!("d[-_-]b");
   |     ------------------------------ in this macro invocation
   |
note: expanding this metavariable
  --> $DIR/concat-usage-errors.rs:114:31
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                               ^^^^^^^
   = note: this error originates in the macro `bad_literal_string` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0807]: `${concat(..)}` constructed an invalid identifier
  --> $DIR/concat-usage-errors.rs:114:16
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     bad_literal_string!("-1");
   |     ------------------------- in this macro invocation
   |
note: expanding this metavariable
  --> $DIR/concat-usage-errors.rs:114:31
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                               ^^^^^^^
   = note: this error originates in the macro `bad_literal_string` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0807]: `${concat(..)}` constructed an invalid identifier
  --> $DIR/concat-usage-errors.rs:114:16
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     bad_literal_string!("1.0");
   |     -------------------------- in this macro invocation
   |
note: expanding this metavariable
  --> $DIR/concat-usage-errors.rs:114:31
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                               ^^^^^^^
   = note: this error originates in the macro `bad_literal_string` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0807]: `${concat(..)}` constructed an invalid identifier
  --> $DIR/concat-usage-errors.rs:114:16
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     bad_literal_string!("'1'");
   |     -------------------------- in this macro invocation
   |
note: expanding this metavariable
  --> $DIR/concat-usage-errors.rs:114:31
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                               ^^^^^^^
   = note: this error originates in the macro `bad_literal_string` (in Nightly builds, run with -Z macro-backtrace for more info)

error: metavariables of `${concat(..)}` must be of type `ident`, `literal` or `tt`
  --> $DIR/concat-usage-errors.rs:127:31
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                               ^^^^^^^
   |
   = note: currently only string literals are supported

error: metavariables of `${concat(..)}` must be of type `ident`, `literal` or `tt`
  --> $DIR/concat-usage-errors.rs:127:31
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                               ^^^^^^^
   |
   = note: currently only string literals are supported
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: metavariables of `${concat(..)}` must be of type `ident`, `literal` or `tt`
  --> $DIR/concat-usage-errors.rs:127:31
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                               ^^^^^^^
   |
   = note: currently only string literals are supported
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: metavariables of `${concat(..)}` must be of type `ident`, `literal` or `tt`
  --> $DIR/concat-usage-errors.rs:127:31
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                               ^^^^^^^
   |
   = note: currently only string literals are supported
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: metavariables of `${concat(..)}` must be of type `ident`, `literal` or `tt`
  --> $DIR/concat-usage-errors.rs:127:31
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                               ^^^^^^^
   |
   = note: currently only string literals are supported
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: metavariables of `${concat(..)}` must be of type `ident`, `literal` or `tt`
  --> $DIR/concat-usage-errors.rs:138:31
   |
LL |         const ${concat(_foo, $tt)}: () = ();
   |                               ^^
   |
   = note: currently only string literals are supported

error: metavariables of `${concat(..)}` must be of type `ident`, `literal` or `tt`
  --> $DIR/concat-usage-errors.rs:138:31
   |
LL |         const ${concat(_foo, $tt)}: () = ();
   |                               ^^
   |
   = note: currently only string literals are supported
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: metavariables of `${concat(..)}` must be of type `ident`, `literal` or `tt`
  --> $DIR/concat-usage-errors.rs:138:31
   |
LL |         const ${concat(_foo, $tt)}: () = ();
   |                               ^^
   |
   = note: currently only string literals are supported
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 37 previous errors

Some errors have detailed explanations: E0806, E0807.
For more information about an error, try `rustc --explain E0806`.
